[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "miniut"
version = "0.2.0"
authors = [
  {
    name="Sebastian Martinez",
    email="sebastian.martinez.serna@gmail.com"
  },
]
description = "A mini utilities tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/JuanS3/miniut"
"Bug Tracker" = "https://github.com/JuanS3/miniut/issues"